--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
         "build": "vite build --config vite/config.prod.mjs"
     },
     "dependencies": {
+        "@capacitor/android": "^6.1.0",
+        "@capacitor/cli": "^6.1.0",
+        "@capacitor/core": "^6.1.0",
+        "@capacitor/ios": "^6.1.0",
+        "@ionic/react": "^8.2.5",
         "phaser": "3.80.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
